--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>randomsp-site</title>
     <meta name="description" content="">
+	<script src="https://gumroad.com/js/gumroad.js"></script>
   </head>
   <body>
     <div id="app"></div>
